--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
-    "pg": "^8.11.5",
+    "@supabase/supabase-js": "^2.42.0",
     "zod": "^3.23.8",
     "cors": "^2.8.5"
   }
